--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
             <!-- Navbar Brand-->
             <a class="navbar-brand ps-3" href="index.html">
-                <img class="header-logo" width="120px" height="60px" style="margin-left: 30px;" src="./assets/img/Logo.png" alt="">    
+                <img class="header-logo" src="./assets/img/a1.png" alt="">    
             </a>
             <!-- Sidebar Toggle-->
             <button class="btn btn-link btn-sm order-1 order-lg-0 me-4 me-lg-0" id="sidebarToggle" href="#!"><i class="fas fa-bars"></i></button>
